--- a/views/index.html
+++ b/views/index.html
@@ -27,18 +27,15 @@
                     </div>
                     <div class='blog-data'>
                         <label for="blog-content">Content</label>
-                        <input type="text" name="blog-content" id="blog-content" ,
-                            placeholder="Once upon a midnight dreary">
+                        <input type="text" name="blog-content" id="blog-content" placeholder="Once upon a midnight dreary">
                     </div>
                     <div class='blog-data'>
                         <label for="blog-author">Author</label>
-                        <input type="text" name="blog-author" id="blog-author" ,
-                            placeholder="Poe">
+                        <input type="text" name="blog-author" id="blog-author" placeholder="Poe">
                     </div>
                     <div class='blog-data'>
                         <label for="blog-date">Publish Date</label>
-                        <input type="text" name="blog-date" id="blog-date" ,
-                            placeholder="02/14/2019">
+                        <input type="text" name="blog-date" id="blog-date" placeholder="02/14/2019">
                     </div>
                     <button type="submit">Add Entry</button>
                 </form>
